--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
 	],
 	"require" : {
 		"php": ">=5.4",
-		"symfony/console": "@stable",
-		"symfony/process": "@stable"
+		"symfony/console": "@stable"
 	},
 	"autoload"    : {
 		"classmap": [
