--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	],
 	"require" : {
 		"php": ">=5.4",
-		"symfony/console": "@stable"
+		"symfony/console": "@stable",
+		"guzzlehttp/guzzle": "~5.0"
 	},
 	"autoload"    : {
 		"classmap": [
