add silex to the composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"symfony/finder": "~2.2",
         "symfony/process": "~2.1",
 		"guzzlehttp/guzzle": "~5.0",
-		"seld/phar-utils": "~1.0"
+		"seld/phar-utils": "~1.0",
+		"silex/silex": "~1.3"
 	},
 	"autoload"    : {
 		"classmap": [
