--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/process": "~2.1",
 		"guzzlehttp/guzzle": "~5.0",
 		"seld/phar-utils": "~1.0",
-		"silex/silex": "~1.3"
+		"silex/silex": "~1.3",
+		"ext-pdo_sqlite": "*"
 	},
 	"autoload"    : {
 		"classmap": [
