--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"seld/phar-utils": "~1.0",
 		"silex/silex": "~1.3",
 		"ext-pdo_sqlite": "*",
-		"wp-cli/php-cli-tools": "*"
+		"wp-cli/php-cli-tools": "*",
+		"league/oauth2-client": "*"
 	},
 	"autoload"    : {
 		"classmap": [
