--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,9 @@
         "symfony/process": "~2.1",
 		"guzzlehttp/guzzle": "~5.0",
 		"seld/phar-utils": "~1.0",
-		"silex/silex": "~1.3",
 		"ext-pdo_sqlite": "*",
 		"wp-cli/php-cli-tools": "*",
-		"league/oauth2-client": "*"
+		"adoy/oauth2": "*"
 	},
 	"autoload"    : {
 		"classmap": [
